# Digital_Mirror

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json
.github/workflows/: backend-ci.yml  mobile-ci.yml
android/: settings.gradle
android/app/: build.gradle
app/: index.jsx
apps/mobile/: CLAUDE.md  app.json  babel.config.js  jest.config.js  metro.config.js  package.json  tsconfig.json
backend/: CLAUDE.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  looks.py  upload.py
backend/app/core/: config.py  database.py  redis.py  security.py  storage.py
backend/app/models/: critique_result.py  look.py  product.py  profile.py  tutorial.py
backend/app/schemas/: auth.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_looks.py  test_upload.py
docs/: architecture.md  data-model.md  design-system.md  env-guide.md  ml-pipeline.md
tasks/: phase-01-foundations.md  phase-02-camera.md  phase-03-editor.md  phase-04-ml.md  phase-05-ai-critique.md  phase-06-tutorials.md  phase-07-polish.md
wireframes/01_splash_welcome/: code.html
wireframes/02_face_profile_setup/: code.html
wireframes/03_goal_selection/: code.html
wireframes/04_home/: code.html
wireframes/05_camera_upload/: code.html
wireframes/06_creation_mode_selector/: code.html
wireframes/07_1_editor_empty/: code.html
wireframes/07_2_editor_mid_edit/: code.html
(+45 files in other folders)
